--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <script>
         // Change background image here
-        const backgroundURL = "https://i.ibb.co/vCd29NJd/1751604135213.jpg"; 
+        const backgroundURL = "https://media.giphy.com/media/l0MYB8Ory7Hqefo9a/giphy.gif"; 
         document.body.style.backgroundImage = `url('${backgroundURL}')`;
 
         function openSite(url) {
